# rfx-services

./: .gitignore  .gitmodules  Common.mk  Kconfig  Makefile.am  bootstrap  configure.ac  rfx-services.files  rfx-services.includes
conf/: dk.sh
doc/: main_page.md
services/: .service_reroute.sh.swp  Makefile.am  docker_machine.mk  docker_services.ac  docker_services.kconfig  docker_services.mk  docker_utils.sh  gencert.sh  rfx-services.service.in  rfx-services.sh.in  rfx-services.target  service.config.template  service_reroute.sh  systemd.service.template
services/BVLC_caffe/: Makefile.am  docker-compose.yml
services/ansible_awx/: Makefile.am  SECRET_KEY  docker-compose.yml.in
services/btsync/: Dockerfile  Makefile.am  docker-compose.yml  start-btsync
services/docker-registry/: Makefile.am  docker-compose.yml.in
services/etherpad/: Makefile.am
services/ghost/: Makefile.am  docker-compose.yml.in
services/ghost/certbot/: Dockerfile
services/ghost/nginx/: default.conf
services/ghost/nginx/etc/: default.conf
services/gitlab/: Makefile.am  docker-compose.yml  docker-composer.yml  gitlab.ac  gitlab.kconfig  gitlab.mk  gitlab.rb.in
services/gitlab-runner/: Makefile.am  docker-compose.yml.in
services/image-super-resolution/: Makefile.am
services/interlock/: Makefile.am  config.toml  docker-compose.yml  nginx.conf.template
services/jenkins/: Makefile.am  docker-compose.yml  docker-compose.yml.in
services/jenkins/jenkins-scripts/: init_user.groovy  install_plugin.groovy
services/jenkins/src/: Dockerfile
services/mediawiki/: Dockerfile  LocalSettings.php  Makefile.am  README.md  docker-compose.yml.in  docker-composer.yml  my_wiki.db
services/mediawiki/src/: Dockerfile
services/nagios/: Makefile.am  docker-compose.yml.in
services/nagios/nagios_etc/: nagios.cfg
services/nagios/nagios_etc/objects/: localhost.cfg
services/newaccount/: Dockerfile  Makefile.am  docker-composer.yml  docker-composer.yml.in
services/nfs/: Makefile.am  client-compose.yml.in  docker-compose.yml.in  ganesha.conf  scality.conf  start_nfs.sh  start_nfs2.sh
services/open-balena/: Makefile.am
services/publications/: Dockerfile  Makefile.am  docker-composer.yml  php.ini  ssmtp.conf
services/rfx/: Makefile.am  docker-compose.yml.in  networks.yml.in
services/sharelatex/: Makefile.am  docker-compose.yml.in  docker-composer.yml  nginx-sharelatex.conf  sharelatex.ac  sharelatex.kconfig
services/spark/: Makefile.am  docker-compose.yml  docker-compose.yml.in
services/spark/.jupyter/: jupyter_notebook_config.json
services/spark/pyspark_mdsplus/: Dockerfile
services/spider_wiki/: Makefile.am  config_v1.yml.in  docker-composer_v1.yml.in
services/syncthing/: docker-compose.yml
services/tensorflow/: Makefile.am  docker-compose.yml  docker-compose_bazel.yml  docker-compose_bbf.yml
services/tensorflow/buildbarn-compose/: BUILD.bazel  WORKSPACE  docker-compose.yml  run.sh
services/tensorflow/buildbarn-compose/config-storage/: blobstore.conf
services/tensorflow/tensorflow-docker/: Dockerfile
services/wikijs/: Dockerfile  Makefile.am  config.yml  config_v1.yml  config_v1.yml.in  config_v2.yml.in  docker-compose_v1-dev.yml.in  docker-compose_v1.yml.in  docker-compose_v2.yml.in  docker-composer.yml  docker-composer_v1.yml  docker-composer_v1.yml.in  init.sh
